force-app/main/default/objects/Route_Work__c/Route_Work__c.object-meta.xml
<CustomObject>
    <label>Route Work</label>
    <nameField>
        <displayFormat>RW-{MM}{DD}-{000}</displayFormat>
        <label>Route Work ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>