force-app/main/default/objects/Route_Work__c/fields/AgentID__c.field-meta.xml
<CustomField>
    <fullName>AgentID__c</fullName>
    <formula>Service_Resource_Engineers__r.User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AgentID</label>
    <type>Text</type>
</CustomField>