force-app/main/default/objects/Route_Work__c/fields/CaseID__c.field-meta.xml
<CustomField>
    <fullName>CaseID__c</fullName>
    <formula>Cases__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseID</label>
    <type>Text</type>
</CustomField>