force-app/main/default/objects/Route_Work__c/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cases</label>
    <referenceTo>Cases__c</referenceTo>
    <relationshipLabel>Route Work</relationshipLabel>
    <relationshipName>Route_Work</relationshipName>
    <type>Lookup</type>
</CustomField>