force-app/main/default/objects/Route_Work__c/fields/Service_Resource_Engineers__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Engineers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource Engineers</label>
    <referenceTo>Service_Recourse_Engineers__c</referenceTo>
    <relationshipLabel>Route Work</relationshipLabel>
    <relationshipName>Route_Work</relationshipName>
    <type>Lookup</type>
</CustomField>