force-app/main/default/objects/Route_Work__c/fields/TestAgent__c.field-meta.xml
<CustomField>
    <fullName>TestAgent__c</fullName>
    <label>TestAgent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>