force-app/main/default/objects/Route_Work__c/fields/TestCases__c.field-meta.xml
<CustomField>
    <fullName>TestCases__c</fullName>
    <label>TestCases</label>
    <length>18</length>
    <type>Text</type>
</CustomField>