force-app/main/default/objects/Route_Work__c/listViews/RECENT.listView-meta.xml
<ListView>
    <fullName>RECENT</fullName>
    <columns>NAME</columns>
    <columns>CaseID__c</columns>
    <columns>Cases__c</columns>
    <columns>Service_Resource_Engineers__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>RECENT</label>
</ListView>