force-app/main/default/objects/Route_Work__c/listViews/Recently.listView-meta.xml
<ListView>
    <fullName>Recently</fullName>
    <columns>NAME</columns>
    <columns>Service_Resource_Engineers__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Recent</label>
</ListView>